# Core-Data

./: CMakeLists.txt  README.md
include/data/: Connection.h  SharedHandle.h
sample/: appDatabase.cpp
src/: Optimized.cc  PlatformSdk.h
test/: Optimized.cc
test/temp/: Stub_UnitTests.cpp
